objects/DMD_CustomObject__c.object
<CustomObject>
    <fields>
        <fullName>DMD_MyTimeAndDate__c</fullName>
        <label>DMD_MyTimeAndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMD_external__c</fullName>
        <externalId>true</externalId>
        <label>DMD_external</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_First__c</fullName>
        <label>Field First</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DMD Objeto de David</label>
    <nameField>
        <label>DMD_CustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMD Objeto de Davids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>DMD_SharingReason__c</fullName>
        <label>DMD_SharingReason</label>
    </sharingReasons>
    <validationRules>
        <fullName>DMD_Field_First_VR</fullName>
        <active>true</active>
        <description>Testing Dx Format</description>
        <errorConditionFormula>Field_First__c == &quot;Testing&quot;</errorConditionFormula>
        <errorDisplayField>Field_First__c</errorDisplayField>
        <errorMessage>Expected value is &quot;Testing&quot;</errorMessage>
    </validationRules>
</CustomObject>